# LLMOPS

./: .env.example  .gitignore  README.md  gcp_check.py  pyproject.toml
artifacts/: yoda_data_processing.json
scripts/: pipeline_runner.py
src/: constants.py
src/pipeline_components/: data_transformation_component.py
src/pipelines/: model_training_pipeline.py
